# omscs

./: .gitignore  README.md  omscs.py  pyproject.toml
.devcontainer/: devcontainer.json
pickles/: dataframe.pkl  dataframe_2026-01-13_18-21-59.pkl  dataframe_2026-01-14_22-53-16.pkl  dataframe_2026-01-14_23-29-11.pkl  dataframe_2026-01-15_21-17-08.pkl  dataframe_2026-01-15_21-20-46.pkl  dataframe_2026-01-15_21-35-49.pkl  dataframe_2026-01-15_22-05-49.pkl
